--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,18 +1,23 @@
 project:
   type: website
+  output-dir: docs
 
 website:
-  title: "dashboards"
+  # title: "dashboards"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+    right:
+      - icon: github
+        href: "https://brandonkoskie.github.io/your-repo-name/"
+        text: "My Website"
 
 format:
   html:
     theme:
-      - cosmo
+      - darkly
       - brand
     css: styles.css
     toc: true
