--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
       - about.qmd
     right:
       - icon: github
-        href: "https://brandonkoskie.github.io/your-repo-name/"
+        href: "https://brandonkoskie.github.io/"
         text: "My Website"
 
 format:
